<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".saibaMaisPage"
    android:background="@color/primaria">

    <TextView
        android:id="@+id/tv_saiba_mais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="36dp"
        android:textSize="24sp"

        android:textAlignment="center"
        android:text="@string/saiba_mais_conteudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saiba_mais2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="36dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/saiba_mais_conteudo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saiba_mais" />

    <Button
        android:id="@+id/ib_voltar_saiba_mais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar_a_pagina_inicial"
        android:textColor="@color/white"
        android:backgroundTint="@color/complemntaria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saiba_mais2" />
</androidx.constraintlayout.widget.ConstraintLayout>