<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primaria">



    <ImageView
        android:id="@+id/iv_fundo2"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/secundaria"
        android:contentDescription="fundo2" />


    <ImageView
        android:id="@+id/iv_fundoCirculo"
        android:layout_width="310dp"
        android:layout_height="260dp"
        android:layout_marginBottom="160dp"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EDT_altura"
        app:srcCompat="@drawable/ic_fiber_manual_record_white_24dp" />

    <ImageButton
        android:id="@+id/ib_check"
        android:layout_width="173dp"
        android:layout_height="138dp"
        android:layout_marginBottom="160dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EDT_peso"
        app:srcCompat="@drawable/ic_check_circle_outline_white_24dp" />

    <EditText
        android:id="@+id/EDT_peso"
        style="@style/input_txt"
        android:layout_marginBottom="64dp"
        android:hint="@string/peso"
        app:layout_constraintBottom_toTopOf="@+id/iv_fundo2"
        app:layout_constraintEnd_toStartOf="@+id/EDT_altura"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EDT_altura"
        style="@style/input_txt"
        android:hint="@string/altura"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_fundo2"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_apresentacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/primaria">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:background="@color/secundaria">

            <!-- Media -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/imc_check"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white"
                    android:textSize="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/instrucao"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/ib_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_help_center_white_24dp"
        android:background="@color/secundaria"/>

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_check" />

    <Button
        android:id="@+id/bt_saiba_mais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saiba_mais"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iv_fundo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultado" />


</androidx.constraintlayout.widget.ConstraintLayout>